--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,14 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  #<<: *default
+  #database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: development_database_name
+  pool: 5
+  username: ubuntu
+  password: 123456
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
