--- a/config/database.yml
+++ b/config/database.yml
@@ -16,8 +16,8 @@ development:
   encoding: unicode
   database: development_database_name
   pool: 5
-  #username: ubuntu
-  #password: <%= ENV["PG_PASS"] %>
+  username: ubuntu
+  password: <%= ENV["PG_PASS"] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
